--- a/src/Component/ChatBox/ChatBoxLayout.css
+++ b/src/Component/ChatBox/ChatBoxLayout.css
@@ -1,6 +1,6 @@
- /* body {
+  body {
   font-size: 20px;
-}
+} 
 
 .header {
   position: fixed;
@@ -16,8 +16,9 @@
   display: grid;
   height: 800px;
   padding-top: 130px;
-  /* grid-template-columns: 1fr 6fr; */
-  /* grid-template-columns: repeat(auto-fit, minmax(479px, auto));
+   grid-template-columns: 1fr 6fr; 
+   grid-template-columns: repeat(auto-fit, minmax(479px, auto));
+   width: 12rem;
 }
 
 .nav {
@@ -34,19 +35,17 @@
   text-align: center;
   padding: 20px;
   background-color: rgb(223, 223, 223);
-}  */ 
+}  
 
-.bot {
-  bottom: 0;
-  right: 0;
-  position: fixed;
-  width: 500px;
-}
+  /* .chatbot {
+    height: 25rem !important;
+    width: 14rem !important; */
+  /* } */
 
-.btn {
+.bot--btn {
   font-size: 20px;
-  float: right;
-  width: 100%;
+  margin-right: 20rem;
+  
   padding: 8px;
   background-color: rgb(183, 0, 255)
 }
